# Numerical-Analysis

./: README.md
Analysis/: test.cpp
Analysis/Complex Series/: Taylor.cpp
Analysis/Complex Series/Complex Series/: CMakeLists.txt  ComplexSeries.cpp  ComplexSeries.h  main.cpp
Analysis/Differentiation/: autodif.cpp  autodiff.cpp  autodiff.h  symbolic_diff.cpp
Analysis/Differentiation/Symbolic Differentiation/: CMakeLists.txt  Makefile  main.cpp  symbolic_diff.h
Analysis/Euler's Number/: euler.cpp  euler.h
Analysis/Series/: SinFunctionAnalysis.cpp
Appendix/CSV Reader/: csv.h
CSV Reader/: csv.cpp  csv.h
Conversions/Binary to decimal/: binToDec.cpp  main.cpp
Conversions/Decimal to Binary/: decToBin.cpp  decToBin.h  main.cpp
Euler's Number/: Makefile  euler.cpp  euler.h  main.cpp
Linear Algebra/2D Vector/: Utils.h
Linear Algebra/Linear Equation Methods/: jacobi.cpp
Linear Algebra/Matrix/: Matrix.cpp  Matrix.h  main.cpp
Linear Algebra/Non Linear Equations/: non_linear_equation.cpp  non_linear_equation_2.cpp
Linear Algebra/R2 vector/: Utils.cpp  Vector2D.cpp  Vector2D.h
Linear programming/: interior_point.h  main.cpp
Linear programming/Interior Point/: interior_point.cpp
Linear programming/Monte Carlo/: MonteCarlo.cpp
Linear programming/Simplex/: simplex.h
Matrix Algebra/2D Vector/: Utils.cpp  Vector2D.cpp  Vector2D.h
Monte Carlo/: MonteCarlo.cpp
Optimization/Least squares/: test.csv
Optimization/Newton Raphson/: NewtonRaphson.cpp
Optimization/Secant method/: secant.cpp  secant.h
Series/: MacLaurin.cpp  data.txt
(+32 files in other folders)
